Fixed card collapsing css issues. last is to fix buttons and sliders

--- a/src/Models/ContractItem.css
+++ b/src/Models/ContractItem.css
@@ -163,10 +163,6 @@ input:checked+.slider:before {
 
 @media screen and (max-width: 800px) {
 
-.rightColumn, .leftColumn{
-  width: 0;
-  margin: 0;
-}
 
   .content {
     width: 100%;
