--- a/src/Models/Contracts.css
+++ b/src/Models/Contracts.css
@@ -19,14 +19,16 @@
   width: 0;
 }
 .content{
+  padding: 2%;
   margin: 0;
-  width: 97%;
+  width: 100%;
 }
 .Ccard {
   width: 100%;
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
+  margin-bottom: 10%;
   }
 
 }
